@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-2014 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,6 @@
 
 package org.springframework.core.style;
 
-import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
 
 /**
@@ -59,7 +58,7 @@ public class ToStringCreator {
 	 * @param obj the object to be stringified
 	 * @param styler the ValueStyler encapsulating pretty-print instructions
 	 */
-	public ToStringCreator(Object obj, @Nullable ValueStyler styler) {
+	public ToStringCreator(Object obj, ValueStyler styler) {
 		this(obj, new DefaultToStringStyler(styler != null ? styler : StylerUtils.DEFAULT_VALUE_STYLER));
 	}
 
@@ -68,7 +67,7 @@ public class ToStringCreator {
 	 * @param obj the object to be stringified
 	 * @param styler the ToStringStyler encapsulating pretty-print instructions
 	 */
-	public ToStringCreator(Object obj, @Nullable ToStringStyler styler) {
+	public ToStringCreator(Object obj, ToStringStyler styler) {
 		Assert.notNull(obj, "The object to be styled must not be null");
 		this.object = obj;
 		this.styler = (styler != null ? styler : DEFAULT_TO_STRING_STYLER);
@@ -83,7 +82,7 @@ public class ToStringCreator {
 	 * @return this, to support call-chaining
 	 */
 	public ToStringCreator append(String fieldName, byte value) {
-		return append(fieldName, Byte.valueOf(value));
+		return append(fieldName, new Byte(value));
 	}
 
 	/**
@@ -93,7 +92,7 @@ public class ToStringCreator {
 	 * @return this, to support call-chaining
 	 */
 	public ToStringCreator append(String fieldName, short value) {
-		return append(fieldName, Short.valueOf(value));
+		return append(fieldName, new Short(value));
 	}
 
 	/**
@@ -103,7 +102,7 @@ public class ToStringCreator {
 	 * @return this, to support call-chaining
 	 */
 	public ToStringCreator append(String fieldName, int value) {
-		return append(fieldName, Integer.valueOf(value));
+		return append(fieldName, new Integer(value));
 	}
 
 	/**
@@ -113,7 +112,7 @@ public class ToStringCreator {
 	 * @return this, to support call-chaining
 	 */
 	public ToStringCreator append(String fieldName, long value) {
-		return append(fieldName, Long.valueOf(value));
+		return append(fieldName, new Long(value));
 	}
 
 	/**
@@ -123,7 +122,7 @@ public class ToStringCreator {
 	 * @return this, to support call-chaining
 	 */
 	public ToStringCreator append(String fieldName, float value) {
-		return append(fieldName, Float.valueOf(value));
+		return append(fieldName, new Float(value));
 	}
 
 	/**
@@ -133,7 +132,7 @@ public class ToStringCreator {
 	 * @return this, to support call-chaining
 	 */
 	public ToStringCreator append(String fieldName, double value) {
-		return append(fieldName, Double.valueOf(value));
+		return append(fieldName, new Double(value));
 	}
 
 	/**
@@ -152,7 +151,7 @@ public class ToStringCreator {
 	 * @param value the field value
 	 * @return this, to support call-chaining
 	 */
-	public ToStringCreator append(String fieldName, @Nullable Object value) {
+	public ToStringCreator append(String fieldName, Object value) {
 		printFieldSeparatorIfNecessary();
 		this.styler.styleField(this.buffer, fieldName, value);
 		return this;
@@ -169,7 +168,7 @@ public class ToStringCreator {
 
 	/**
 	 * Append the provided value.
-	 * @param value the value to append
+	 * @param value The value to append
 	 * @return this, to support call-chaining.
 	 */
 	public ToStringCreator append(Object value) {
