@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-2014 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -26,11 +26,13 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.UUID;
 
 import org.junit.Test;
 
@@ -43,31 +45,23 @@ import org.springframework.core.convert.converter.ConverterFactory;
 import org.springframework.core.convert.converter.GenericConverter;
 import org.springframework.core.io.DescriptiveResource;
 import org.springframework.core.io.Resource;
-import org.springframework.lang.Nullable;
 import org.springframework.tests.Assume;
 import org.springframework.tests.TestGroup;
 import org.springframework.util.StopWatch;
 import org.springframework.util.StringUtils;
 
-import static java.util.Comparator.*;
-import static java.util.stream.Collectors.*;
 import static org.hamcrest.Matchers.*;
 import static org.junit.Assert.*;
 
 /**
- * Unit tests for {@link GenericConversionService}.
- *
- * <p>In this package for access to package-local converter implementations.
- *
  * @author Keith Donald
  * @author Juergen Hoeller
  * @author Phillip Webb
  * @author David Haraburda
- * @author Sam Brannen
  */
 public class GenericConversionServiceTests {
 
-	private final GenericConversionService conversionService = new GenericConversionService();
+	private GenericConversionService conversionService = new GenericConversionService();
 
 
 	@Test
@@ -85,14 +79,20 @@ public class GenericConversionServiceTests {
 		assertTrue(conversionService.canConvert(boolean.class, Boolean.class));
 	}
 
-	@Test(expected = IllegalArgumentException.class)
-	public void canConvertFromClassSourceTypeToNullTargetType() {
-		conversionService.canConvert(String.class, null);
-	}
-
-	@Test(expected = IllegalArgumentException.class)
-	public void canConvertFromTypeDescriptorSourceTypeToNullTargetType() {
-		conversionService.canConvert(TypeDescriptor.valueOf(String.class), null);
+	@Test
+	public void canConvertIllegalArgumentNullTargetType() {
+		try {
+			assertFalse(conversionService.canConvert(String.class, null));
+			fail("Should have failed");
+		}
+		catch (IllegalArgumentException ex) {
+		}
+		try {
+			assertFalse(conversionService.canConvert(TypeDescriptor.valueOf(String.class), null));
+			fail("Should have failed");
+		}
+		catch (IllegalArgumentException ex) {
+		}
 	}
 
 	@Test
@@ -104,7 +104,7 @@ public class GenericConversionServiceTests {
 	@Test
 	public void convert() {
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		assertEquals(Integer.valueOf(3), conversionService.convert("3", Integer.class));
+		assertEquals(new Integer(3), conversionService.convert("3", Integer.class));
 	}
 
 	@Test
@@ -112,17 +112,17 @@ public class GenericConversionServiceTests {
 		assertEquals(null, conversionService.convert(null, Integer.class));
 	}
 
-	@Test(expected = ConversionFailedException.class)
+	@Test(expected=ConversionFailedException.class)
 	public void convertNullSourcePrimitiveTarget() {
-		conversionService.convert(null, int.class);
+		assertEquals(null, conversionService.convert(null, int.class));
 	}
 
-	@Test(expected = ConversionFailedException.class)
+	@Test(expected=ConversionFailedException.class)
 	public void convertNullSourcePrimitiveTargetTypeDescriptor() {
 		conversionService.convert(null, TypeDescriptor.valueOf(String.class), TypeDescriptor.valueOf(int.class));
 	}
 
-	@Test(expected = IllegalArgumentException.class)
+	@Test(expected=IllegalArgumentException.class)
 	public void convertNotNullSourceNullSourceTypeDescriptor() {
 		conversionService.convert("3", null, TypeDescriptor.valueOf(int.class));
 	}
@@ -133,23 +133,41 @@ public class GenericConversionServiceTests {
 		assertEquals(Boolean.FALSE, conversionService.convert(false, Boolean.class));
 	}
 
-	@Test(expected = ConverterNotFoundException.class)
+	@Test
 	public void converterNotFound() {
-		conversionService.convert("3", Integer.class);
+		try {
+			conversionService.convert("3", Integer.class);
+			fail("Should have thrown an exception");
+		}
+		catch (ConverterNotFoundException e) {
+		}
 	}
 
-	@Test(expected = IllegalArgumentException.class)
+	@Test
+	@SuppressWarnings("rawtypes")
 	public void addConverterNoSourceTargetClassInfoAvailable() {
-		conversionService.addConverter(new UntypedConverter());
+		try {
+			conversionService.addConverter(new Converter() {
+				@Override
+				public Object convert(Object source) {
+					return source;
+				}
+			});
+			fail("Should have failed");
+		}
+		catch (IllegalArgumentException ex) {
+		}
 	}
 
 	@Test
 	public void sourceTypeIsVoid() {
+		GenericConversionService conversionService = new GenericConversionService();
 		assertFalse(conversionService.canConvert(void.class, String.class));
 	}
 
 	@Test
 	public void targetTypeIsVoid() {
+		GenericConversionService conversionService = new GenericConversionService();
 		assertFalse(conversionService.canConvert(String.class, void.class));
 	}
 
@@ -158,25 +176,32 @@ public class GenericConversionServiceTests {
 		assertNull(conversionService.convert(null, Integer.class));
 	}
 
-	@Test(expected = IllegalArgumentException.class)
-	public void convertToNullTargetClass() {
-		conversionService.convert("3", (Class<?>) null);
+	@Test(expected=IllegalArgumentException.class)
+	public void convertNullTargetClass() {
+		assertNull(conversionService.convert("3", (Class<?>) null));
+		assertNull(conversionService.convert("3", TypeDescriptor.valueOf(String.class), null));
 	}
 
-	@Test(expected = IllegalArgumentException.class)
-	public void convertToNullTargetTypeDescriptor() {
-		conversionService.convert("3", TypeDescriptor.valueOf(String.class), null);
+	@Test(expected=IllegalArgumentException.class)
+	public void convertNullTypeDescriptor() {
+		assertNull(conversionService.convert("3", TypeDescriptor.valueOf(String.class), null));
 	}
 
-	@Test(expected = IllegalArgumentException.class)
+	@Test(expected=IllegalArgumentException.class)
 	public void convertWrongSourceTypeDescriptor() {
 		conversionService.convert("3", TypeDescriptor.valueOf(Integer.class), TypeDescriptor.valueOf(Long.class));
 	}
 
-	@Test(expected = ConversionFailedException.class)
+	@Test
 	public void convertWrongTypeArgument() {
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		conversionService.convert("BOGUS", Integer.class);
+		try {
+			conversionService.convert("BOGUS", Integer.class);
+			fail("Should have failed");
+		}
+		catch (ConversionFailedException e) {
+
+		}
 	}
 
 	@Test
@@ -188,14 +213,20 @@ public class GenericConversionServiceTests {
 			}
 		});
 		Integer result = conversionService.convert("3", Integer.class);
-		assertEquals(Integer.valueOf(3), result);
+		assertEquals(new Integer(3), result);
 	}
 
 	// SPR-8718
-	@Test(expected = ConverterNotFoundException.class)
+
+	@Test(expected=ConverterNotFoundException.class)
 	public void convertSuperTarget() {
 		conversionService.addConverter(new ColorConverter());
 		conversionService.convert("#000000", SystemColor.class);
+	}
+
+	public class ColorConverter implements Converter<String, Color> {
+		@Override
+		public Color convert(String source) { if (!source.startsWith("#")) source = "#" + source; return Color.decode(source); }
 	}
 
 	@Test
@@ -204,10 +235,10 @@ public class GenericConversionServiceTests {
 		conversionService.addConverter(new StringToBooleanConverter());
 		assertTrue(conversionService.canConvert(String.class, boolean.class));
 		Boolean b = conversionService.convert("true", boolean.class);
-		assertTrue(b);
+		assertEquals(Boolean.TRUE, b);
 		assertTrue(conversionService.canConvert(TypeDescriptor.valueOf(String.class), TypeDescriptor.valueOf(boolean.class)));
 		b = (Boolean) conversionService.convert("true", TypeDescriptor.valueOf(String.class), TypeDescriptor.valueOf(boolean.class));
-		assertTrue(b);
+		assertEquals(Boolean.TRUE, b);
 	}
 
 	@Test
@@ -219,16 +250,22 @@ public class GenericConversionServiceTests {
 		assertEquals(3, three.intValue());
 	}
 
-	@Test(expected = ConverterNotFoundException.class)
+	@Test
 	public void genericConverterDelegatingBackToConversionServiceConverterNotFound() {
 		conversionService.addConverter(new ObjectToArrayConverter(conversionService));
 		assertFalse(conversionService.canConvert(String.class, Integer[].class));
-		conversionService.convert("3,4,5", Integer[].class);
+		try {
+			conversionService.convert("3,4,5", Integer[].class);
+			fail("should have failed");
+		}
+		catch (ConverterNotFoundException ex) {
+		}
 	}
 
 	@Test
 	public void testListToIterableConversion() {
-		List<Object> raw = new ArrayList<>();
+		GenericConversionService conversionService = new GenericConversionService();
+		List<Object> raw = new ArrayList<Object>();
 		raw.add("one");
 		raw.add("two");
 		Object converted = conversionService.convert(raw, Iterable.class);
@@ -237,7 +274,8 @@ public class GenericConversionServiceTests {
 
 	@Test
 	public void testListToObjectConversion() {
-		List<Object> raw = new ArrayList<>();
+		GenericConversionService conversionService = new GenericConversionService();
+		List<Object> raw = new ArrayList<Object>();
 		raw.add("one");
 		raw.add("two");
 		Object converted = conversionService.convert(raw, Object.class);
@@ -246,7 +284,8 @@ public class GenericConversionServiceTests {
 
 	@Test
 	public void testMapToObjectConversion() {
-		Map<Object, Object> raw = new HashMap<>();
+		GenericConversionService conversionService = new GenericConversionService();
+		Map<Object, Object> raw = new HashMap<Object, Object>();
 		raw.put("key", "value");
 		Object converted = conversionService.convert(raw, Object.class);
 		assertSame(raw, converted);
@@ -254,7 +293,8 @@ public class GenericConversionServiceTests {
 
 	@Test
 	public void testInterfaceToString() {
-		conversionService.addConverter(new MyBaseInterfaceToStringConverter());
+		GenericConversionService conversionService = new GenericConversionService();
+		conversionService.addConverter(new MyBaseInterfaceConverter());
 		conversionService.addConverter(new ObjectToStringConverter());
 		Object converted = conversionService.convert(new MyInterfaceImplementer(), String.class);
 		assertEquals("RESULT", converted);
@@ -262,7 +302,8 @@ public class GenericConversionServiceTests {
 
 	@Test
 	public void testInterfaceArrayToStringArray() {
-		conversionService.addConverter(new MyBaseInterfaceToStringConverter());
+		GenericConversionService conversionService = new GenericConversionService();
+		conversionService.addConverter(new MyBaseInterfaceConverter());
 		conversionService.addConverter(new ArrayToArrayConverter(conversionService));
 		String[] converted = conversionService.convert(new MyInterface[] {new MyInterfaceImplementer()}, String[].class);
 		assertEquals("RESULT", converted[0]);
@@ -270,7 +311,8 @@ public class GenericConversionServiceTests {
 
 	@Test
 	public void testObjectArrayToStringArray() {
-		conversionService.addConverter(new MyBaseInterfaceToStringConverter());
+		GenericConversionService conversionService = new GenericConversionService();
+		conversionService.addConverter(new MyBaseInterfaceConverter());
 		conversionService.addConverter(new ArrayToArrayConverter(conversionService));
 		String[] converted = conversionService.convert(new MyInterfaceImplementer[] {new MyInterfaceImplementer()}, String[].class);
 		assertEquals("RESULT", converted[0]);
@@ -278,61 +320,112 @@ public class GenericConversionServiceTests {
 
 	@Test
 	public void testStringArrayToResourceArray() {
+		GenericConversionService conversionService = new DefaultConversionService();
 		conversionService.addConverter(new MyStringArrayToResourceArrayConverter());
-		Resource[] converted = conversionService.convert(new String[] { "x1", "z3" }, Resource[].class);
-		List<String> descriptions = Arrays.stream(converted).map(Resource::getDescription).sorted(naturalOrder()).collect(toList());
-		assertEquals(Arrays.asList("1", "3"), descriptions);
+		Resource[] converted = conversionService.convert(new String[] {"x1", "z3"}, Resource[].class);
+		assertEquals(2, converted.length);
+		assertEquals("1", converted[0].getDescription());
+		assertEquals("3", converted[1].getDescription());
 	}
 
 	@Test
 	public void testStringArrayToIntegerArray() {
+		GenericConversionService conversionService = new DefaultConversionService();
 		conversionService.addConverter(new MyStringArrayToIntegerArrayConverter());
 		Integer[] converted = conversionService.convert(new String[] {"x1", "z3"}, Integer[].class);
-		assertArrayEquals(new Integer[] { 1, 3 }, converted);
+		assertEquals(2, converted.length);
+		assertEquals(1, converted[0].intValue());
+		assertEquals(3, converted[1].intValue());
 	}
 
 	@Test
 	public void testStringToIntegerArray() {
+		GenericConversionService conversionService = new DefaultConversionService();
 		conversionService.addConverter(new MyStringToIntegerArrayConverter());
 		Integer[] converted = conversionService.convert("x1,z3", Integer[].class);
-		assertArrayEquals(new Integer[] { 1, 3 }, converted);
+		assertEquals(2, converted.length);
+		assertEquals(1, converted[0].intValue());
+		assertEquals(3, converted[1].intValue());
 	}
 
 	@Test
 	public void testWildcardMap() throws Exception {
-		Map<String, String> input = new LinkedHashMap<>();
+		GenericConversionService conversionService = new DefaultConversionService();
+		Map<String, String> input = new LinkedHashMap<String, String>();
 		input.put("key", "value");
 		Object converted = conversionService.convert(input, TypeDescriptor.forObject(input), new TypeDescriptor(getClass().getField("wildcardMap")));
 		assertEquals(input, converted);
 	}
 
 	@Test
+	public void testListOfList() {
+		GenericConversionService service = new DefaultConversionService();
+		List<String> list1 = Arrays.asList("Foo", "Bar");
+		List<String> list2 = Arrays.asList("Baz", "Boop");
+		List<List<String>> list = Arrays.asList(list1, list2);
+		String result = service.convert(list, String.class);
+		assertNotNull(result);
+		assertEquals("Foo,Bar,Baz,Boop", result);
+	}
+
+	@Test
 	public void testStringToString() {
+		GenericConversionService service = new DefaultConversionService();
 		String value = "myValue";
-		String result = conversionService.convert(value, String.class);
+		String result = service.convert(value, String.class);
 		assertSame(value, result);
 	}
 
 	@Test
 	public void testStringToObject() {
+		GenericConversionService service = new DefaultConversionService();
 		String value = "myValue";
-		Object result = conversionService.convert(value, Object.class);
+		Object result = service.convert(value, Object.class);
 		assertSame(value, result);
 	}
 
 	@Test
 	public void testIgnoreCopyConstructor() {
+		GenericConversionService service = new DefaultConversionService();
 		WithCopyConstructor value = new WithCopyConstructor();
-		Object result = conversionService.convert(value, WithCopyConstructor.class);
+		Object result = service.convert(value, WithCopyConstructor.class);
 		assertSame(value, result);
+	}
+
+	@Test
+	public void testConvertUUID() {
+		GenericConversionService service = new DefaultConversionService();
+		UUID uuid = UUID.randomUUID();
+		String convertToString = service.convert(uuid, String.class);
+		UUID convertToUUID = service.convert(convertToString, UUID.class);
+		assertEquals(uuid, convertToUUID);
+	}
+
+	@Test
+	public void testPerformance1() {
+		Assume.group(TestGroup.PERFORMANCE);
+		GenericConversionService conversionService = new DefaultConversionService();
+		StopWatch watch = new StopWatch("integer->string conversionPerformance");
+		watch.start("convert 4,000,000 with conversion service");
+		for (int i = 0; i < 4000000; i++) {
+			conversionService.convert(3, String.class);
+		}
+		watch.stop();
+		watch.start("convert 4,000,000 manually");
+		for (int i = 0; i < 4000000; i++) {
+			new Integer(3).toString();
+		}
+		watch.stop();
+		System.out.println(watch.prettyPrint());
 	}
 
 	@Test
 	public void testPerformance2() throws Exception {
 		Assume.group(TestGroup.PERFORMANCE);
+		GenericConversionService conversionService = new DefaultConversionService();
 		StopWatch watch = new StopWatch("list<string> -> list<integer> conversionPerformance");
 		watch.start("convert 4,000,000 with conversion service");
-		List<String> source = new LinkedList<>();
+		List<String> source = new LinkedList<String>();
 		source.add("1");
 		source.add("2");
 		source.add("3");
@@ -343,21 +436,24 @@ public class GenericConversionServiceTests {
 		watch.stop();
 		watch.start("convert 4,000,000 manually");
 		for (int i = 0; i < 4000000; i++) {
-			List<Integer> target = new ArrayList<>(source.size());
+			List<Integer> target = new ArrayList<Integer>(source.size());
 			for (String element : source) {
 				target.add(Integer.valueOf(element));
 			}
 		}
 		watch.stop();
-		// System.out.println(watch.prettyPrint());
+		System.out.println(watch.prettyPrint());
 	}
+
+	public static List<Integer> list;
 
 	@Test
 	public void testPerformance3() throws Exception {
 		Assume.group(TestGroup.PERFORMANCE);
+		GenericConversionService conversionService = new DefaultConversionService();
 		StopWatch watch = new StopWatch("map<string, string> -> map<string, integer> conversionPerformance");
 		watch.start("convert 4,000,000 with conversion service");
-		Map<String, String> source = new HashMap<>();
+		Map<String, String> source = new HashMap<String, String>();
 		source.put("1", "1");
 		source.put("2", "2");
 		source.put("3", "3");
@@ -368,34 +464,114 @@ public class GenericConversionServiceTests {
 		watch.stop();
 		watch.start("convert 4,000,000 manually");
 		for (int i = 0; i < 4000000; i++) {
-			Map<String, Integer> target = new HashMap<>(source.size());
-			source.forEach((k, v) -> target.put(k, Integer.valueOf(v)));
+			Map<String, Integer> target = new HashMap<String, Integer>(source.size());
+			for (Map.Entry<String, String> entry : source.entrySet()) {
+				target.put(entry.getKey(), Integer.valueOf(entry.getValue()));
+			}
 		}
 		watch.stop();
-		// System.out.println(watch.prettyPrint());
+		System.out.println(watch.prettyPrint());
 	}
+
+	public static Map<String, Integer> map;
 
 	@Test
 	public void emptyListToArray() {
 		conversionService.addConverter(new CollectionToArrayConverter(conversionService));
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		List<String> list = new ArrayList<>();
+		List<String> list = new ArrayList<String>();
 		TypeDescriptor sourceType = TypeDescriptor.forObject(list);
 		TypeDescriptor targetType = TypeDescriptor.valueOf(String[].class);
 		assertTrue(conversionService.canConvert(sourceType, targetType));
-		assertEquals(0, ((String[]) conversionService.convert(list, sourceType, targetType)).length);
+		assertEquals(0, ((String[])conversionService.convert(list, sourceType, targetType)).length);
 	}
 
 	@Test
 	public void emptyListToObject() {
 		conversionService.addConverter(new CollectionToObjectConverter(conversionService));
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
-		List<String> list = new ArrayList<>();
+		List<String> list = new ArrayList<String>();
 		TypeDescriptor sourceType = TypeDescriptor.forObject(list);
 		TypeDescriptor targetType = TypeDescriptor.valueOf(Integer.class);
 		assertTrue(conversionService.canConvert(sourceType, targetType));
 		assertNull(conversionService.convert(list, sourceType, targetType));
 	}
+
+	private interface MyBaseInterface {
+
+	}
+
+
+	private interface MyInterface extends MyBaseInterface {
+
+	}
+
+
+	private static class MyInterfaceImplementer implements MyInterface {
+
+	}
+
+
+	private static class MyBaseInterfaceConverter implements Converter<MyBaseInterface, String> {
+
+		@Override
+		public String convert(MyBaseInterface source) {
+			return "RESULT";
+		}
+	}
+
+
+	private static class MyStringArrayToResourceArrayConverter implements Converter<String[], Resource[]>	{
+
+		@Override
+		public Resource[] convert(String[] source) {
+			Resource[] result = new Resource[source.length];
+			for (int i = 0; i < source.length; i++) {
+				result[i] = new DescriptiveResource(source[i].substring(1));
+			}
+			return result;
+		}
+	}
+
+
+	private static class MyStringArrayToIntegerArrayConverter implements Converter<String[], Integer[]>	{
+
+		@Override
+		public Integer[] convert(String[] source) {
+			Integer[] result = new Integer[source.length];
+			for (int i = 0; i < source.length; i++) {
+				result[i] = Integer.parseInt(source[i].substring(1));
+			}
+			return result;
+		}
+	}
+
+
+	private static class MyStringToIntegerArrayConverter implements Converter<String, Integer[]>	{
+
+		@Override
+		public Integer[] convert(String source) {
+			String[] srcArray = StringUtils.commaDelimitedListToStringArray(source);
+			Integer[] result = new Integer[srcArray.length];
+			for (int i = 0; i < srcArray.length; i++) {
+				result[i] = Integer.parseInt(srcArray[i].substring(1));
+			}
+			return result;
+		}
+	}
+
+
+	public static class WithCopyConstructor {
+
+		public WithCopyConstructor() {
+		}
+
+		public WithCopyConstructor(WithCopyConstructor value) {
+		}
+	}
+
+
+	public static Map<String, ?> wildcardMap;
 
 	@Test
 	public void stringToArrayCanConvert() {
@@ -409,15 +585,17 @@ public class GenericConversionServiceTests {
 	public void stringToCollectionCanConvert() throws Exception {
 		conversionService.addConverter(new StringToCollectionConverter(conversionService));
 		assertTrue(conversionService.canConvert(String.class, Collection.class));
-		TypeDescriptor targetType = new TypeDescriptor(getClass().getField("integerCollection"));
+		TypeDescriptor targetType = new TypeDescriptor(getClass().getField("stringToCollection"));
 		assertFalse(conversionService.canConvert(TypeDescriptor.valueOf(String.class), targetType));
 		conversionService.addConverterFactory(new StringToNumberConverterFactory());
 		assertTrue(conversionService.canConvert(TypeDescriptor.valueOf(String.class), targetType));
 	}
 
+	public Collection<Integer> stringToCollection;
+
 	@Test
 	public void testConvertiblePairsInSet() {
-		Set<GenericConverter.ConvertiblePair> set = new HashSet<>();
+		Set<GenericConverter.ConvertiblePair> set = new HashSet<GenericConverter.ConvertiblePair>();
 		set.add(new GenericConverter.ConvertiblePair(Number.class, String.class));
 		assert set.contains(new GenericConverter.ConvertiblePair(Number.class, String.class));
 	}
@@ -438,14 +616,43 @@ public class GenericConversionServiceTests {
 		assertFalse(pair.hashCode() == pairOpposite.hashCode());
 	}
 
-	@Test(expected = IllegalArgumentException.class)
-	public void canConvertIllegalArgumentNullTargetTypeFromClass() {
-		conversionService.canConvert(String.class, null);
+	@Test
+	public void convertPrimitiveArray() {
+		GenericConversionService conversionService = new DefaultConversionService();
+		byte[] byteArray = new byte[] { 1, 2, 3 };
+		Byte[] converted = conversionService.convert(byteArray, Byte[].class);
+		assertTrue(Arrays.equals(converted, new Byte[] {1, 2, 3}));
 	}
 
-	@Test(expected = IllegalArgumentException.class)
+	@Test
+	public void canConvertIllegalArgumentNullTargetTypeFromClass() {
+		try {
+			conversionService.canConvert(String.class, null);
+			fail("Did not thow IllegalArgumentException");
+		}
+		catch (IllegalArgumentException ex) {
+		}
+	}
+
+	@Test
 	public void canConvertIllegalArgumentNullTargetTypeFromTypeDescriptor() {
-		conversionService.canConvert(TypeDescriptor.valueOf(String.class), null);
+		try {
+			conversionService.canConvert(TypeDescriptor.valueOf(String.class), null);
+			fail("Did not thow IllegalArgumentException");
+		}
+		catch(IllegalArgumentException ex) {
+		}
+	}
+
+	@Test
+	@SuppressWarnings({ "rawtypes" })
+	public void convertHashMapValuesToList() {
+		GenericConversionService conversionService = new DefaultConversionService();
+		Map<String, Integer> hashMap = new LinkedHashMap<String, Integer>();
+		hashMap.put("1", 1);
+		hashMap.put("2", 2);
+		List converted = conversionService.convert(hashMap.values(), List.class);
+		assertEquals(Arrays.asList(1, 2), converted);
 	}
 
 	@Test
@@ -458,6 +665,7 @@ public class GenericConversionServiceTests {
 
 	@Test
 	public void conditionalConverter() {
+		GenericConversionService conversionService = new GenericConversionService();
 		MyConditionalConverter converter = new MyConditionalConverter();
 		conversionService.addConverter(new ColorConverter());
 		conversionService.addConverter(converter);
@@ -467,6 +675,7 @@ public class GenericConversionServiceTests {
 
 	@Test
 	public void conditionalConverterFactory() {
+		GenericConversionService conversionService = new GenericConversionService();
 		MyConditionalConverterFactory converter = new MyConditionalConverterFactory();
 		conversionService.addConverter(new ColorConverter());
 		conversionService.addConverterFactory(converter);
@@ -476,26 +685,21 @@ public class GenericConversionServiceTests {
 	}
 
 	@Test
-	public void conditionalConverterCachingForDifferentAnnotationAttributes() throws Exception {
-		conversionService.addConverter(new ColorConverter());
-		conversionService.addConverter(new MyConditionalColorConverter());
-
-		assertEquals(Color.BLACK, conversionService.convert("000000xxxx",
-				new TypeDescriptor(getClass().getField("activeColor"))));
-		assertEquals(Color.BLACK, conversionService.convert(" #000000 ",
-				new TypeDescriptor(getClass().getField("inactiveColor"))));
-		assertEquals(Color.BLACK, conversionService.convert("000000yyyy",
-				new TypeDescriptor(getClass().getField("activeColor"))));
-		assertEquals(Color.BLACK, conversionService.convert("  #000000  ",
-				new TypeDescriptor(getClass().getField("inactiveColor"))));
-	}
-
-	@Test
 	public void shouldNotSupportNullConvertibleTypesFromNonConditionalGenericConverter() {
-		GenericConverter converter = new NonConditionalGenericConverter();
+		GenericConversionService conversionService = new GenericConversionService();
+		GenericConverter converter = new GenericConverter() {
+			@Override
+			public Set<ConvertiblePair> getConvertibleTypes() {
+				return null;
+			}
+			@Override
+			public Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
+				return null;
+			}
+		};
 		try {
 			conversionService.addConverter(converter);
-			fail("Did not throw IllegalStateException");
+			fail("Did not throw");
 		}
 		catch (IllegalStateException ex) {
 			assertEquals("Only conditional converters may return null convertible types", ex.getMessage());
@@ -504,31 +708,54 @@ public class GenericConversionServiceTests {
 
 	@Test
 	public void conditionalConversionForAllTypes() {
+		GenericConversionService conversionService = new GenericConversionService();
 		MyConditionalGenericConverter converter = new MyConditionalGenericConverter();
 		conversionService.addConverter(converter);
 		assertEquals((Integer) 3, conversionService.convert(3, Integer.class));
 		assertThat(converter.getSourceTypes().size(), greaterThan(2));
-		assertTrue(converter.getSourceTypes().stream().allMatch(td -> Integer.class.equals(td.getType())));
+		Iterator<TypeDescriptor> iterator = converter.getSourceTypes().iterator();
+		while(iterator.hasNext()) {
+			assertEquals(Integer.class, iterator.next().getType());
+		}
 	}
 
 	@Test
 	public void convertOptimizeArray() {
 		// SPR-9566
+		GenericConversionService conversionService = new DefaultConversionService();
 		byte[] byteArray = new byte[] { 1, 2, 3 };
 		byte[] converted = conversionService.convert(byteArray, byte[].class);
 		assertSame(byteArray, converted);
 	}
 
 	@Test
+	public void convertCannotOptimizeArray() {
+		GenericConversionService conversionService = new GenericConversionService();
+		conversionService.addConverter(new Converter<Byte, Byte>() {
+			@Override
+			public Byte convert(Byte source) {
+				return (byte) (source + 1);
+			}
+		});
+		DefaultConversionService.addDefaultConverters(conversionService);
+		byte[] byteArray = new byte[] { 1, 2, 3 };
+		byte[] converted = conversionService.convert(byteArray, byte[].class);
+		assertNotSame(byteArray, converted);
+		assertTrue(Arrays.equals(new byte[] {2, 3, 4}, converted));
+	}
+
+	@Test
 	public void testEnumToStringConversion() {
 		conversionService.addConverter(new EnumToStringConverter(conversionService));
-		assertEquals("A", conversionService.convert(MyEnum.A, String.class));
+		String result = conversionService.convert(MyEnum.A, String.class);
+		assertEquals("A", result);
 	}
 
 	@Test
 	public void testSubclassOfEnumToString() throws Exception {
 		conversionService.addConverter(new EnumToStringConverter(conversionService));
-		assertEquals("FIRST", conversionService.convert(EnumWithSubclass.FIRST, String.class));
+		String result = conversionService.convert(EnumWithSubclass.FIRST, String.class);
+		assertEquals("FIRST", result);
 	}
 
 	@Test
@@ -536,25 +763,13 @@ public class GenericConversionServiceTests {
 		// SPR-9692
 		conversionService.addConverter(new EnumToStringConverter(conversionService));
 		conversionService.addConverter(new MyEnumInterfaceToStringConverter<MyEnum>());
-		assertEquals("1", conversionService.convert(MyEnum.A, String.class));
-	}
-
-	@Test
-	public void testStringToEnumWithInterfaceConversion() {
-		conversionService.addConverterFactory(new StringToEnumConverterFactory());
-		conversionService.addConverterFactory(new StringToMyEnumInterfaceConverterFactory());
-		assertEquals(MyEnum.A, conversionService.convert("1", MyEnum.class));
-	}
-
-	@Test
-	public void testStringToEnumWithBaseInterfaceConversion() {
-		conversionService.addConverterFactory(new StringToEnumConverterFactory());
-		conversionService.addConverterFactory(new StringToMyEnumBaseInterfaceConverterFactory());
-		assertEquals(MyEnum.A, conversionService.convert("base1", MyEnum.class));
+		String result = conversionService.convert(MyEnum.A, String.class);
+		assertEquals("1", result);
 	}
 
 	@Test
 	public void convertNullAnnotatedStringToString() throws Exception {
+		DefaultConversionService.addDefaultConverters(conversionService);
 		String source = null;
 		TypeDescriptor sourceType = new TypeDescriptor(getClass().getField("annotatedString"));
 		TypeDescriptor targetType = TypeDescriptor.valueOf(String.class);
@@ -568,7 +783,7 @@ public class GenericConversionServiceTests {
 		conversionService.addConverter(new MyStringToStringCollectionConverter());
 		conversionService.addConverter(new MyStringToIntegerCollectionConverter());
 
-		assertEquals(Collections.singleton("testX"),
+		assertEquals(Collections.singleton(4),  // should be "testX" from MyStringToStringCollectionConverter, ideally
 				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection"))));
 		assertEquals(Collections.singleton(4),
 				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection"))));
@@ -578,7 +793,7 @@ public class GenericConversionServiceTests {
 				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("genericCollection"))));
 		assertEquals(Collections.singleton(4),
 				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection"))));
-		assertEquals(Collections.singleton("testX"),
+		assertEquals(Collections.singleton(4),  // should be "testX" from MyStringToStringCollectionConverter, ideally
 				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("stringCollection"))));
 	}
 
@@ -599,13 +814,9 @@ public class GenericConversionServiceTests {
 		assertEquals(Collections.singleton("testX"),
 				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("rawCollection"))));
 
-		try {
-			conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection")));
-			fail("Should have thrown ConverterNotFoundException");
-		}
-		catch (ConverterNotFoundException ex) {
-			// expected
-		}
+		// The following is unpleasant but simply a consequence of the raw type matching algorithm in Spring 3.x
+		assertEquals(Collections.singleton("testX"),
+				conversionService.convert("test", TypeDescriptor.valueOf(String.class), new TypeDescriptor(getClass().getField("integerCollection"))));
 	}
 
 	@Test
@@ -641,93 +852,12 @@ public class GenericConversionServiceTests {
 	}
 
 
-	@ExampleAnnotation(active = true)
+	@ExampleAnnotation
 	public String annotatedString;
-
-	@ExampleAnnotation(active = true)
-	public Color activeColor;
-
-	@ExampleAnnotation(active = false)
-	public Color inactiveColor;
-
-	public List<Integer> list;
-
-	public Map<String, Integer> map;
-
-	public Map<String, ?> wildcardMap;
-
-	@SuppressWarnings("rawtypes")
-	public Collection rawCollection;
-
-	public Collection<?> genericCollection;
-
-	public Collection<String> stringCollection;
-
-	public Collection<Integer> integerCollection;
 
 
 	@Retention(RetentionPolicy.RUNTIME)
-	private @interface ExampleAnnotation {
-
-		boolean active();
-	}
-
-
-	private interface MyBaseInterface {
-	}
-
-
-	private interface MyInterface extends MyBaseInterface {
-	}
-
-
-	private static class MyInterfaceImplementer implements MyInterface {
-	}
-
-
-	private static class MyBaseInterfaceToStringConverter implements Converter<MyBaseInterface, String> {
-
-		@Override
-		public String convert(MyBaseInterface source) {
-			return "RESULT";
-		}
-	}
-
-
-	private static class MyStringArrayToResourceArrayConverter implements Converter<String[], Resource[]> {
-
-		@Override
-		public Resource[] convert(String[] source) {
-			return Arrays.stream(source).map(s -> s.substring(1)).map(DescriptiveResource::new).toArray(Resource[]::new);
-		}
-	}
-
-
-	private static class MyStringArrayToIntegerArrayConverter implements Converter<String[], Integer[]> {
-
-		@Override
-		public Integer[] convert(String[] source) {
-			return Arrays.stream(source).map(s -> s.substring(1)).map(Integer::valueOf).toArray(Integer[]::new);
-		}
-	}
-
-
-	private static class MyStringToIntegerArrayConverter implements Converter<String, Integer[]>	{
-
-		@Override
-		public Integer[] convert(String source) {
-			String[] srcArray = StringUtils.commaDelimitedListToStringArray(source);
-			return Arrays.stream(srcArray).map(s -> s.substring(1)).map(Integer::valueOf).toArray(Integer[]::new);
-		}
-	}
-
-
-	private static class WithCopyConstructor {
-
-		WithCopyConstructor() {}
-
-		@SuppressWarnings("unused")
-		WithCopyConstructor(WithCopyConstructor value) {}
+	public static @interface ExampleAnnotation {
 	}
 
 
@@ -752,24 +882,9 @@ public class GenericConversionServiceTests {
 	}
 
 
-	private static class NonConditionalGenericConverter implements GenericConverter {
-
-		@Override
-		public Set<ConvertiblePair> getConvertibleTypes() {
-			return null;
-		}
-
-		@Override
-		@Nullable
-		public Object convert(@Nullable Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
-			return null;
-		}
-	}
-
-
 	private static class MyConditionalGenericConverter implements GenericConverter, ConditionalConverter {
 
-		private final List<TypeDescriptor> sourceTypes = new ArrayList<>();
+		private List<TypeDescriptor> sourceTypes = new ArrayList<TypeDescriptor>();
 
 		@Override
 		public Set<ConvertiblePair> getConvertibleTypes() {
@@ -783,8 +898,7 @@ public class GenericConversionServiceTests {
 		}
 
 		@Override
-		@Nullable
-		public Object convert(@Nullable Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
+		public Object convert(Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
 			return null;
 		}
 
@@ -821,41 +935,25 @@ public class GenericConversionServiceTests {
 		}
 	}
 
-	private static interface MyEnumBaseInterface {
-		String getBaseCode();
-	}
 
+	interface MyEnumInterface {
 
-	private interface MyEnumInterface extends MyEnumBaseInterface {
 		String getCode();
 	}
 
 
-	private enum MyEnum implements MyEnumInterface {
+	public static enum MyEnum implements MyEnumInterface {
 
-		A("1"),
-		B("2"),
-		C("3");
-
-		private final String code;
-
-		MyEnum(String code) {
-			this.code = code;
-		}
-
-		@Override
-		public String getCode() {
-			return code;
-		}
-
-		@Override
-		public String getBaseCode() {
-			return "base" + code;
+		A {
+			@Override
+			public String getCode() {
+				return "1";
+			}
 		}
 	}
 
 
-	private enum EnumWithSubclass {
+	public enum EnumWithSubclass {
 
 		FIRST {
 			@Override
@@ -866,8 +964,7 @@ public class GenericConversionServiceTests {
 	}
 
 
-	@SuppressWarnings("rawtypes")
-	private static class MyStringToRawCollectionConverter implements Converter<String, Collection> {
+	public static class MyStringToRawCollectionConverter implements Converter<String, Collection> {
 
 		@Override
 		public Collection convert(String source) {
@@ -876,7 +973,7 @@ public class GenericConversionServiceTests {
 	}
 
 
-	private static class MyStringToGenericCollectionConverter implements Converter<String, Collection<?>> {
+	public static class MyStringToGenericCollectionConverter implements Converter<String, Collection<?>> {
 
 		@Override
 		public Collection<?> convert(String source) {
@@ -894,61 +991,7 @@ public class GenericConversionServiceTests {
 	}
 
 
-	private static class StringToMyEnumInterfaceConverterFactory implements ConverterFactory<String, MyEnumInterface> {
-
-		@SuppressWarnings({"unchecked", "rawtypes"})
-		public <T extends MyEnumInterface> Converter<String, T> getConverter(Class<T> targetType) {
-			return new StringToMyEnumInterfaceConverter(targetType);
-		}
-
-		private static class StringToMyEnumInterfaceConverter<T extends Enum<?> & MyEnumInterface> implements Converter<String, T> {
-
-			private final Class<T> enumType;
-
-			public StringToMyEnumInterfaceConverter(Class<T> enumType) {
-				this.enumType = enumType;
-			}
-
-			public T convert(String source) {
-				for (T value : enumType.getEnumConstants()) {
-					if (value.getCode().equals(source)) {
-						return value;
-					}
-				}
-				return null;
-			}
-		}
-	}
-
-
-	private static class StringToMyEnumBaseInterfaceConverterFactory implements ConverterFactory<String, MyEnumBaseInterface> {
-
-		@SuppressWarnings({"unchecked", "rawtypes"})
-		public <T extends MyEnumBaseInterface> Converter<String, T> getConverter(Class<T> targetType) {
-			return new StringToMyEnumBaseInterfaceConverter(targetType);
-		}
-
-		private static class StringToMyEnumBaseInterfaceConverter<T extends Enum<?> & MyEnumBaseInterface> implements Converter<String, T> {
-
-			private final Class<T> enumType;
-
-			public StringToMyEnumBaseInterfaceConverter(Class<T> enumType) {
-				this.enumType = enumType;
-			}
-
-			public T convert(String source) {
-				for (T value : enumType.getEnumConstants()) {
-					if (value.getBaseCode().equals(source)) {
-						return value;
-					}
-				}
-				return null;
-			}
-		}
-	}
-
-
-	private static class MyStringToStringCollectionConverter implements Converter<String, Collection<String>> {
+	public static class MyStringToStringCollectionConverter implements Converter<String, Collection<String>> {
 
 		@Override
 		public Collection<String> convert(String source) {
@@ -957,7 +1000,7 @@ public class GenericConversionServiceTests {
 	}
 
 
-	private static class MyStringToIntegerCollectionConverter implements Converter<String, Collection<Integer>> {
+	public static class MyStringToIntegerCollectionConverter implements Converter<String, Collection<Integer>> {
 
 		@Override
 		public Collection<Integer> convert(String source) {
@@ -966,36 +1009,12 @@ public class GenericConversionServiceTests {
 	}
 
 
-	@SuppressWarnings("rawtypes")
-	private static class UntypedConverter implements Converter {
+	public Collection rawCollection;
 
-		@Override
-		public Object convert(Object source) {
-			return source;
-		}
-	}
+	public Collection<?> genericCollection;
 
+	public Collection<String> stringCollection;
 
-	private static class ColorConverter implements Converter<String, Color> {
+	public Collection<Integer> integerCollection;
 
-		@Override
-		public Color convert(String source) {
-			return Color.decode(source.trim());
-		}
-	}
-
-
-	private static class MyConditionalColorConverter implements Converter<String, Color>, ConditionalConverter {
-
-		@Override
-		public boolean matches(TypeDescriptor sourceType, TypeDescriptor targetType) {
-			ExampleAnnotation ann = targetType.getAnnotation(ExampleAnnotation.class);
-			return (ann != null && ann.active());
-		}
-
-		@Override
-		public Color convert(String source) {
-			return Color.decode(source.substring(0, 6));
-		}
-	}
 }
