@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-2012 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,11 +16,14 @@
 
 package org.springframework.test.context.junit4.orm;
 
-import javax.persistence.PersistenceException;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.springframework.test.transaction.TransactionTestUtils.assertInTransaction;
 
-import org.hibernate.Session;
 import org.hibernate.SessionFactory;
 import org.hibernate.exception.ConstraintViolationException;
+import org.hibernate.exception.GenericJDBCException;
+
 import org.junit.Before;
 import org.junit.Test;
 
@@ -30,18 +33,12 @@ import org.springframework.test.context.junit4.AbstractTransactionalJUnit4Spring
 import org.springframework.test.context.junit4.orm.domain.DriversLicense;
 import org.springframework.test.context.junit4.orm.domain.Person;
 import org.springframework.test.context.junit4.orm.service.PersonService;
-import org.springframework.transaction.annotation.Transactional;
-
-import static org.junit.Assert.*;
-import static org.springframework.test.transaction.TransactionTestUtils.*;
 
 /**
  * Transactional integration tests regarding <i>manual</i> session flushing with
  * Hibernate.
  *
  * @author Sam Brannen
- * @author Juergen Hoeller
- * @author Vlad Mihalcea
  * @since 3.0
  */
 @ContextConfiguration
@@ -57,13 +54,20 @@ public class HibernateSessionFlushingTests extends AbstractTransactionalJUnit4Sp
 	private SessionFactory sessionFactory;
 
 
+	protected int countRowsInPersonTable() {
+		return countRowsInTable("person");
+	}
+
+	protected void assertPersonCount(int expectedCount) {
+		assertEquals("Verifying number of rows in the 'person' table.", expectedCount, countRowsInPersonTable());
+	}
+
 	@Before
-	public void setup() {
+	public void setUp() {
 		assertInTransaction(true);
 		assertNotNull("PersonService should have been autowired.", personService);
 		assertNotNull("SessionFactory should have been autowired.", sessionFactory);
 	}
-
 
 	@Test
 	public void findSam() {
@@ -71,28 +75,16 @@ public class HibernateSessionFlushingTests extends AbstractTransactionalJUnit4Sp
 		assertNotNull("Should be able to find Sam", sam);
 		DriversLicense driversLicense = sam.getDriversLicense();
 		assertNotNull("Sam's driver's license should not be null", driversLicense);
-		assertEquals("Verifying Sam's driver's license number", Long.valueOf(1234), driversLicense.getNumber());
-	}
-
-	@Test  // SPR-16956
-	@Transactional(readOnly = true)
-	public void findSamWithReadOnlySession() {
-		Person sam = personService.findByName(SAM);
-		sam.setName("Vlad");
-		// By setting setDefaultReadOnly(true), the user can no longer modify any entity...
-		Session session = sessionFactory.getCurrentSession();
-		session.flush();
-		session.refresh(sam);
-		assertEquals("Sam", sam.getName());
+		assertEquals("Verifying Sam's driver's license number", new Long(1234), driversLicense.getNumber());
 	}
 
 	@Test
 	public void saveJuergenWithDriversLicense() {
 		DriversLicense driversLicense = new DriversLicense(2L, 2222L);
 		Person juergen = new Person(JUERGEN, driversLicense);
-		int numRows = countRowsInTable("person");
+		int numRows = countRowsInPersonTable();
 		personService.save(juergen);
-		assertEquals("Verifying number of rows in the 'person' table.", numRows + 1, countRowsInTable("person"));
+		assertPersonCount(numRows + 1);
 		assertNotNull("Should be able to save and retrieve Juergen", personService.findByName(JUERGEN));
 		assertNotNull("Juergen's ID should have been set", juergen.getId());
 	}
@@ -100,6 +92,13 @@ public class HibernateSessionFlushingTests extends AbstractTransactionalJUnit4Sp
 	@Test(expected = ConstraintViolationException.class)
 	public void saveJuergenWithNullDriversLicense() {
 		personService.save(new Person(JUERGEN));
+	}
+
+	private void updateSamWithNullDriversLicense() {
+		Person sam = personService.findByName(SAM);
+		assertNotNull("Should be able to find Sam", sam);
+		sam.setDriversLicense(null);
+		personService.save(sam);
 	}
 
 	@Test
@@ -110,24 +109,11 @@ public class HibernateSessionFlushingTests extends AbstractTransactionalJUnit4Sp
 		// finally flushed (i.e., in production code)
 	}
 
-	@Test(expected = ConstraintViolationException.class)
-	public void updateSamWithNullDriversLicenseWithSessionFlush() throws Throwable {
+	@Test(expected = GenericJDBCException.class)
+	public void updateSamWithNullDriversLicenseWithSessionFlush() {
 		updateSamWithNullDriversLicense();
 		// Manual flush is required to avoid false positive in test
-		try {
-			sessionFactory.getCurrentSession().flush();
-		}
-		catch (PersistenceException ex) {
-			// Wrapped in Hibernate 5.2, with the constraint violation as cause
-			throw ex.getCause();
-		}
-	}
-
-	private void updateSamWithNullDriversLicense() {
-		Person sam = personService.findByName(SAM);
-		assertNotNull("Should be able to find Sam", sam);
-		sam.setDriversLicense(null);
-		personService.save(sam);
+		sessionFactory.getCurrentSession().flush();
 	}
 
 }
