@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2017 the original author or authors.
+ * Copyright 2002-2012 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -23,24 +23,21 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
 
-import org.junit.Test;
+import junit.framework.TestCase;
 
 import org.springframework.dao.DataAccessException;
 import org.springframework.dao.IncorrectResultSizeDataAccessException;
 import org.springframework.dao.InvalidDataAccessApiUsageException;
 import org.springframework.dao.TypeMismatchDataAccessException;
 
-import static org.junit.Assert.*;
-
 /**
  * @author Juergen Hoeller
  * @since 20.10.2004
  */
-public class DataAccessUtilsTests {
+public class DataAccessUtilsTests extends TestCase {
 
-	@Test
-	public void withEmptyCollection() {
-		Collection<String> col = new HashSet<>();
+	public void testWithEmptyCollection() {
+		Collection col = new HashSet();
 
 		assertNull(DataAccessUtils.uniqueResult(col));
 
@@ -85,9 +82,8 @@ public class DataAccessUtilsTests {
 		}
 	}
 
-	@Test
-	public void withTooLargeCollection() {
-		Collection<String> col = new HashSet<>(2);
+	public void testWithTooLargeCollection() {
+		Collection col = new HashSet();
 		col.add("test1");
 		col.add("test2");
 
@@ -142,38 +138,34 @@ public class DataAccessUtilsTests {
 		}
 	}
 
-	@Test
-	public void withInteger() {
-		Collection<Integer> col = new HashSet<>(1);
-		col.add(5);
+	public void testWithInteger() {
+		Collection col = new HashSet();
+		col.add(new Integer(5));
 
-		assertEquals(Integer.valueOf(5), DataAccessUtils.uniqueResult(col));
-		assertEquals(Integer.valueOf(5), DataAccessUtils.requiredUniqueResult(col));
-		assertEquals(Integer.valueOf(5), DataAccessUtils.objectResult(col, Integer.class));
+		assertEquals(new Integer(5), DataAccessUtils.uniqueResult(col));
+		assertEquals(new Integer(5), DataAccessUtils.requiredUniqueResult(col));
+		assertEquals(new Integer(5), DataAccessUtils.objectResult(col, Integer.class));
 		assertEquals("5", DataAccessUtils.objectResult(col, String.class));
 		assertEquals(5, DataAccessUtils.intResult(col));
 		assertEquals(5, DataAccessUtils.longResult(col));
 	}
 
-	@Test
-	public void withSameIntegerInstanceTwice() {
-		Integer i = 5;
-		Collection<Integer> col = new ArrayList<>(1);
+	public void testWithSameIntegerInstanceTwice() {
+		Integer i = new Integer(5);
+		Collection col = new ArrayList();
 		col.add(i);
 		col.add(i);
 
-		assertEquals(Integer.valueOf(5), DataAccessUtils.uniqueResult(col));
-		assertEquals(Integer.valueOf(5), DataAccessUtils.requiredUniqueResult(col));
-		assertEquals(Integer.valueOf(5), DataAccessUtils.objectResult(col, Integer.class));
+		assertEquals(new Integer(5), DataAccessUtils.uniqueResult(col));
+		assertEquals(new Integer(5), DataAccessUtils.requiredUniqueResult(col));
+		assertEquals(new Integer(5), DataAccessUtils.objectResult(col, Integer.class));
 		assertEquals("5", DataAccessUtils.objectResult(col, String.class));
 		assertEquals(5, DataAccessUtils.intResult(col));
 		assertEquals(5, DataAccessUtils.longResult(col));
 	}
 
-	@Test
-	@SuppressWarnings("deprecation")  // on JDK 9
-	public void withEquivalentIntegerInstanceTwice() {
-		Collection<Integer> col = new ArrayList<>(2);
+	public void testWithEquivalentIntegerInstanceTwice() {
+		Collection col = new ArrayList();
 		col.add(new Integer(5));
 		col.add(new Integer(5));
 
@@ -188,22 +180,20 @@ public class DataAccessUtilsTests {
 		}
 	}
 
-	@Test
-	public void withLong() {
-		Collection<Long> col = new HashSet<>(1);
-		col.add(5L);
+	public void testWithLong() {
+		Collection col = new HashSet();
+		col.add(new Long(5));
 
-		assertEquals(Long.valueOf(5L), DataAccessUtils.uniqueResult(col));
-		assertEquals(Long.valueOf(5L), DataAccessUtils.requiredUniqueResult(col));
-		assertEquals(Long.valueOf(5L), DataAccessUtils.objectResult(col, Long.class));
+		assertEquals(new Long(5), DataAccessUtils.uniqueResult(col));
+		assertEquals(new Long(5), DataAccessUtils.requiredUniqueResult(col));
+		assertEquals(new Long(5), DataAccessUtils.objectResult(col, Long.class));
 		assertEquals("5", DataAccessUtils.objectResult(col, String.class));
 		assertEquals(5, DataAccessUtils.intResult(col));
 		assertEquals(5, DataAccessUtils.longResult(col));
 	}
 
-	@Test
-	public void withString() {
-		Collection<String> col = new HashSet<>(1);
+	public void testWithString() {
+		Collection col = new HashSet();
 		col.add("test1");
 
 		assertEquals("test1", DataAccessUtils.uniqueResult(col));
@@ -227,10 +217,9 @@ public class DataAccessUtilsTests {
 		}
 	}
 
-	@Test
-	public void withDate() {
+	public void testWithDate() {
 		Date date = new Date();
-		Collection<Date> col = new HashSet<>(1);
+		Collection col = new HashSet();
 		col.add(date);
 
 		assertEquals(date, DataAccessUtils.uniqueResult(col));
@@ -255,15 +244,13 @@ public class DataAccessUtilsTests {
 		}
 	}
 
-	@Test
-	public void exceptionTranslationWithNoTranslation() {
+	public void testExceptionTranslationWithNoTranslation() {
 		MapPersistenceExceptionTranslator mpet = new MapPersistenceExceptionTranslator();
 		RuntimeException in = new RuntimeException();
 		assertSame(in, DataAccessUtils.translateIfNecessary(in, mpet));
 	}
 
-	@Test
-	public void exceptionTranslationWithTranslation() {
+	public void testExceptionTranslationWithTranslation() {
 		MapPersistenceExceptionTranslator mpet = new MapPersistenceExceptionTranslator();
 		RuntimeException in = new RuntimeException("in");
 		InvalidDataAccessApiUsageException out = new InvalidDataAccessApiUsageException("out");
@@ -274,8 +261,10 @@ public class DataAccessUtilsTests {
 
 	public static class MapPersistenceExceptionTranslator implements PersistenceExceptionTranslator {
 
-		// in to out
-		private final Map<RuntimeException, RuntimeException> translations = new HashMap<>();
+		/**
+		 * Map<RuntimeException,RuntimeException>: in to out
+		 */
+		private Map translations = new HashMap();
 
 		public void addTranslation(RuntimeException in, RuntimeException out) {
 			this.translations.put(in, out);
